--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </style>
 </head>
-<body class="font-roboto ml-4 md:ml-0">
+<body class="font-roboto pl-4 md:pl-0">
     <header class="bg-[#FFFBF0] lg:px-36 m-auto">
         <!-- nav section -->
         <nav class="md:flex md:justify-between md:items-center mb-5 font-medium pt-6">
