--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     </style>
 </head>
-<body class="font-roboto pl-4 md:pl-0">
-    <header class="bg-[#FFFBF0] lg:px-36 m-auto">
+<body class="font-roboto">
+    <header class="bg-[#FFFBF0] lg:px-36 m-auto  pl-4 md:pl-0">
         <!-- nav section -->
         <nav class="md:flex md:justify-between md:items-center mb-5 font-medium pt-6">
             <img class="w-64 cursor-pointer" src="icons/logo.png" alt="">
@@ -57,7 +57,7 @@
 
     </header>
 
-    <main class="max-w-6xl mx-auto">
+    <main class="max-w-6xl mx-auto  pl-4 md:pl-0">
         <!-- women jacket section -->
          <section class="my-12">
             <h3 class="font-bebas-neue uppercase text-4xl text-[#363958] mb-4 sm:ml-4">
