--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <body class="font-roboto">
     <header class="bg-[#FFFBF0] lg:px-36 m-auto  pl-4 md:pl-0">
         <!-- nav section -->
-        <nav class="md:flex md:justify-between md:items-center mb-5 font-medium pt-6">
+        <nav class="flex sm:flex-row flex-col-reverse sm:justify-between sm:items-center mb-5 font-medium pt-6">
             <img class="w-64 cursor-pointer" src="icons/logo.png" alt="">
-            <div class="flex flex-col md:flex-row text-[#3C3C3C] gap-x-7">
+            <div class="flex flex-col mb-5 sm:mb-0 md:flex-row text-[#3C3C3C] gap-x-7">
                 <a class=" hover:text-[#FCD791]" href="#home">Home</a>
                 <a class=" hover:text-[#FCD791]" href="#product">Product</a>
                 <a class=" hover:text-[#FCD791]" href="#about us">About Us</a>
@@ -179,7 +179,7 @@
          </section>
 
          <!-- shopping section -->
-          <section class="md:flex md:justify-between items-center mb-8 gap-x-32">
+          <section class="flex sm:flex-row flex-col-reverse sm:justify-between sm:items-center mb-8 gap-x-32">
             <div class="md:p-4 md:w-2/5 mb-6">
                 <div class=" flex items-center gap-x-4 shadow-lg rounded-3xl p-5">
                     <img class="w-16 h-17" src="icons/house.png" alt="">
@@ -212,8 +212,8 @@
                 </div>
                
             </div>
-           <div class="w-3/5 ">
-              <img class="md:w-4/5 ml-20 " src="images/shopping.png" alt="">
+           <div class="w-3/5 mb-10">
+              <img class="md:w-4/5 ml-16" src="images/shopping.png" alt="">
            </div>
           </section>
 
